change class FriendshipService